# blog

./: .readthedocs.yaml  pyproject.toml
docs/: docs_requirements.txt
docs/source/: about.rst  conf.py  docs_requirements.txt  index.rst
docs/source/projects/: alien_invasion.rst
docs/source/turotials/: sphinx.rst  workflow.rst
