[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# 把这里改成 optional-dependencies
[
project.optional-dependencies
]
docs = [
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinxcontrib-mermaid",
    "sphinx-design",
]